Implement fido2 on mac and linux

--- a/apps/desktop/src/locales/en/messages.json
+++ b/apps/desktop/src/locales/en/messages.json
@@ -614,6 +614,9 @@
       }
     }
   },
+  "confirmWebauthnInBrowser": {
+    "message": "Confirm your Webauthn Key in your Browser"
+  },
   "rememberMe": {
     "message": "Remember me"
   },
